--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import { Astro } from "astro";
+import Header from "../components/Header.astro";
 ---
 
 <html lang="en">
@@ -12,6 +14,7 @@
         <title>KI & Data Science an der FH Südwestfalen</title>
     </head>
     <body>
+        <Header />
         <main class="prose">
             <slot />
         </main>
@@ -21,5 +24,12 @@
 <style lang="scss">
     body {
         margin: 1rem;
+    }
+
+    main {
+        max-width: 800px;
+        margin-top: 2rem;
+        margin-left: auto;
+        margin-right: auto;
     }
 </style>
