--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ import Header from "../components/Header.astro";
 
 <style lang="scss">
     body {
-        margin: 1rem;
+        margin: 0;
     }
 
     main {
