--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,9 @@
             </li>
             <li><a href="/">Home</a></li>
             <li>Dashboard</li>
-            <li><a href="https://jupiter.fh-swf.de/newhub">JupyterLab</a></li>
+            <li>
+                <a href="https://www.ki.fh-swf.de/jupyterhub">JupyterLab</a>
+            </li>
             <li><a href="/impressum">Impressum</a></li>
         </ul>
     </nav>
