override tailwind css maxwidth

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import Header from "../components/Header.astro";
     </head>
     <body>
         <Header />
-        <main class="prose">
+        <main class="prose max-w-none">
             <slot />
         </main>
     </body>
