--- a/public/index.css
+++ b/public/index.css
@@ -2,6 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
+
+nav a {
+	text-decoration: none;
+}
+
+nav a:hover {
+	text-decoration: underline;
+	text-underline-offset: 0.5em;
+	text-decoration-color: hsl(37, 100%, 50%);
+	text-decoration-thickness: 0.2em;
+	padding-bottom: 1px;
+}
+
+.cluster_state {
+	padding: 0.2ex 1ex;
+	border-radius: 15px;
+	color: white;
+}
+
+.cluster_state.success {
+	background-color: #2ecc71;
+}
+
+.cluster_state.failure {
+	background-color: #e74c3c;
+}
+
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -23,6 +51,7 @@
 ::-webkit-scrollbar-track {
 	background-color: transparent;
 }
+
 body::-webkit-scrollbar,
 body::-webkit-scrollbar-track {
 	background: var(--theme-bg-gradient);
@@ -80,44 +109,44 @@ nav ul {
 	padding: 0;
 }
 
-.content > section > * + *,
-.content > section > blockquote > * + *,
-.content > section > :is(ul, ol) > li > * + *,
-.content details > * + *,
-.content * > astro-slot > * + * {
+.content>section>*+*,
+.content>section>blockquote>*+*,
+.content>section> :is(ul, ol)>li>*+*,
+.content details>*+*,
+.content *>astro-slot>*+* {
 	margin-top: 1.25rem;
 }
 
-.content > section > :is(ul, ol) > li > * + * {
+.content>section> :is(ul, ol)>li>*+* {
 	margin-bottom: 1.25rem;
 }
 
-.content > section > :is(ul, ol) > li,
-.content > section > :is(ul, ol) > li > * + *,
-.content > section > :is(ul, ol) > li > :is(ul, ol) > li,
-.content > section > :is(ul, ol) > li > :is(ul, ol) > li > * + * {
+.content>section> :is(ul, ol)>li,
+.content>section> :is(ul, ol)>li>*+*,
+.content>section> :is(ul, ol)>li> :is(ul, ol)>li,
+.content>section> :is(ul, ol)>li> :is(ul, ol)>li>*+* {
 	margin-top: 0.5rem;
 }
 
-.content > section > :first-child {
+.content>section> :first-child {
 	margin-top: 0;
 }
 
-.content > section > :is(ul, ol),
-.content > section > :is(ul, ol) :is(ul, ol) {
+.content>section> :is(ul, ol),
+.content>section> :is(ul, ol) :is(ul, ol) {
 	padding-inline-start: 1.5em;
 }
 
 /* Typography */
 :is(h1, h2, h3, h4, h5, h6),
-.content > section > .heading-wrapper {
+.content>section>.heading-wrapper {
 	margin-bottom: 1rem;
 	font-weight: bold;
 	line-height: 1.3;
 }
 
-:is(h1, h2, h3, h4, h5, h6) + *,
-.content > section > .heading-wrapper + * {
+:is(h1, h2, h3, h4, h5, h6)+*,
+.content>section>.heading-wrapper+* {
 	margin-top: 0;
 }
 
@@ -141,8 +170,7 @@ h2 {
 	margin-top: 2rem;
 }
 
-:is(h1, h2, h3, h4, h5, h6, .heading-wrapper)
-	+ :is(h1, h2, h3, h4, h5, h6, .heading-wrapper):not(:first-child) {
+:is(h1, h2, h3, h4, h5, h6, .heading-wrapper)+ :is(h1, h2, h3, h4, h5, h6, .heading-wrapper):not(:first-child) {
 	margin-top: 0;
 }
 
@@ -154,30 +182,36 @@ h2 {
 }
 
 h1 {
-	font-size: 2.5rem; /* 40px */
+	font-size: 2.5rem;
+	/* 40px */
 	font-weight: 900;
 }
 
 @media (min-width: 37.75em) {
 	h1 {
-		font-size: 3rem; /* 48px */
+		font-size: 3rem;
+		/* 48px */
 	}
 }
 
 h2 {
-	font-size: 1.875rem; /* 30px */
+	font-size: 1.875rem;
+	/* 30px */
 }
 
 h3 {
-	font-size: 1.5rem; /* 24px */
+	font-size: 1.5rem;
+	/* 24px */
 }
 
 h4 {
-	font-size: 1.25rem; /* 20px */
+	font-size: 1.25rem;
+	/* 20px */
 }
 
 h5 {
-	font-size: 1rem; /* 16px */
+	font-size: 1rem;
+	/* 16px */
 }
 
 .heading-wrapper {
@@ -190,12 +224,12 @@ h5 {
 	margin-block: 0;
 }
 
-.heading-wrapper > * {
+.heading-wrapper>* {
 	display: inline;
 	margin-bottom: 0;
 }
 
-.heading-wrapper > .anchor-link {
+.heading-wrapper>.anchor-link {
 	position: relative;
 	display: inline-flex;
 	margin-inline-end: calc(-1 * var(--icon-size-x));
@@ -217,22 +251,22 @@ h5 {
 		margin-inline-start: calc(-1 * var(--icon-size-x));
 	}
 
-	.heading-wrapper > .anchor-link {
+	.heading-wrapper>.anchor-link {
 		margin-inline-end: 0;
 	}
 }
 
-.heading-wrapper > .anchor-link {
+.heading-wrapper>.anchor-link {
 	opacity: 0.5;
 }
 
 @media (hover: hover) {
-	.heading-wrapper > .anchor-link {
+	.heading-wrapper>.anchor-link {
 		opacity: 0;
 	}
 }
 
-.heading-wrapper:hover > .anchor-link,
+.heading-wrapper:hover>.anchor-link,
 .anchor-link:focus {
 	opacity: 1;
 }
@@ -259,39 +293,39 @@ a {
 	gap: 0.5rem;
 }
 
-article > section :is(ul, ol) > * + * {
+article>section :is(ul, ol)>*+* {
 	margin-top: 0.25rem;
 }
 
-article > section nav :is(ul, ol) > * + * {
+article>section nav :is(ul, ol)>*+* {
 	margin-top: inherit;
 }
 
-article > section li > :is(p, pre, .code-snippet, blockquote):not(:first-child) {
+article>section li> :is(p, pre, .code-snippet, blockquote):not(:first-child) {
 	margin-top: 1rem;
 }
 
-article > section nav :is(ul, ol) {
+article>section nav :is(ul, ol) {
 	padding-inline-start: inherit;
 }
 
-article > section nav {
+article>section nav {
 	margin-top: 1rem;
 	margin-bottom: 2rem;
 }
 
-article > section ::marker {
+article>section ::marker {
 	font-weight: bold;
 	color: var(--theme-text-light);
 }
 
-article > section iframe {
+article>section iframe {
 	width: 100%;
 	height: auto;
 	aspect-ratio: 16 / 9;
 }
 
-a > code {
+a>code {
 	position: relative;
 	color: var(--theme-text-accent);
 	text-underline-offset: var(--padding-block);
@@ -392,9 +426,11 @@ table {
 tbody tr:nth-of-type(odd) {
 	background: var(--theme-divider);
 }
+
 th {
 	font-weight: bold;
 }
+
 td,
 th {
 	padding: 6px;
@@ -455,7 +491,7 @@ video {
 	color: var(--theme-accent-secondary);
 }
 
-.content details[open] > summary {
+.content details[open]>summary {
 	border-bottom: 1px solid var(--theme-shade-subtle);
 }
 
@@ -520,9 +556,11 @@ a.header-link:focus {
 	color: var(--theme-text);
 	text-decoration: underline;
 }
+
 .header-link svg {
 	opacity: 0.6;
 }
+
 .header-link:hover svg {
 	opacity: 0.8;
 }
@@ -531,9 +569,11 @@ a.header-link:focus {
 .header-link {
 	padding-inline-start: 1rem;
 }
+
 .header-link.depth-3 {
 	padding-inline-start: 2rem;
 }
+
 .header-link.depth-4 {
 	padding-inline-start: 3rem;
 }
