--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,5 @@
 ---
+import ClusterStatus from "./ClusterStatus";
 ---
 
 <header>
@@ -17,6 +18,7 @@
                 <a href="https://www.ki.fh-swf.de/jupyterhub">JupyterLab</a>
             </li>
             <li><a href="/impressum">Impressum</a></li>
+            <li><ClusterStatus client:load /></li>
         </ul>
     </nav>
 </header>
@@ -47,14 +49,4 @@
         overflow: hidden;
     }
 
-    a {
-        text-decoration: none;
-        border-bottom: 2px solid transparent;
-    }
-
-    a:hover {
-        text-decoration: none;
-        border-bottom: 3px solid hsl(37, 100%, 50%);
-        padding-bottom: 1px;
-    }
 </style>
