--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,7 @@ import ClusterStatus from "./ClusterStatus";
             <li>
                 <a href="https://fh-swf.de"
                     ><img
+                        class="logo"
                         src="https://jupiter.fh-swf.de/assets/icons/fh-swf.svg"
                     /></a
                 >
@@ -35,7 +36,7 @@ import ClusterStatus from "./ClusterStatus";
         margin-bottom: 1rem;
     }
 
-    img {
+    img.logo {
         height: 40px;
     }
 
@@ -48,5 +49,4 @@ import ClusterStatus from "./ClusterStatus";
         padding: 10px;
         overflow: hidden;
     }
-
 </style>
