Updated Information, Contacts and Dokumentation

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,6 +19,7 @@ import ClusterStatus from "./ClusterStatus";
                 <a href="https://www.ki.fh-swf.de/jupyterhub">JupyterLab</a>
             </li>
             <li><a href="/impressum">Impressum</a></li>
+            <li><a href="/dokumentation">Dokumentation</a></li>
             <li><ClusterStatus client:load /></li>
         </ul>
     </nav>
