rename jupyter link

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import ClusterStatus from "./ClusterStatus";
             <li><a href="/">Home</a></li>
             <li>Dashboard</li>
             <li>
-                <a href="https://www.ki.fh-swf.de/jupyterhub">JupyterLab</a>
+                <a href="https://www.ki.fh-swf.de/jupyterhub">JupyterHub</a>
             </li>
             <li><a href="/impressum">Impressum</a></li>
             <li><a href="/dokumentation">Dokumentation</a></li>
