--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,6 +20,7 @@ import ClusterStatus from "./ClusterStatus";
             </li>
             <li><a href="/impressum">Impressum</a></li>
             <li><a href="/dokumentation">Dokumentation</a></li>
+            <li><a href="/faq">FAQ</a></li>
             <li><ClusterStatus client:load /></li>
         </ul>
     </nav>
