--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,6 +16,9 @@ import ClusterStatus from "./ClusterStatus";
             <li><a href="/">Home</a></li>
             <li>Dashboard</li>
             <li>
+                <a href="https://openai.ki.fh-swf.de">K!mpuls</a>
+            </li>
+            <li>
                 <a href="https://www.ki.fh-swf.de/jupyterhub">JupyterHub</a>
             </li>
             <li><a href="/impressum">Impressum</a></li>
