--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ import ClusterStatus from "./ClusterStatus";
                 <a href="https://fh-swf.de"
                     ><img
                         class="logo"
-                        src="/public/fh-swf.svg"
+                        src="/fh-swf.svg"
                     /></a
                 >
             </li>
