feat: add seo information
- add BreadCrumbList for ki site
- add version information
- add footer

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,17 +14,15 @@ import ClusterStatus from "./ClusterStatus";
                 >
             </li>
             <li><a href="/">Home</a></li>
-            <li>Dashboard</li>
             <li>
-                <a href="https://openai.ki.fh-swf.de">K!mpuls</a>
+                <a href="https://openai.ki.fh-swf.de" target="_blank">K!mpuls</a>
             </li>
             <li>
-                <a href="https://www.ki.fh-swf.de/jupyterhub">JupyterHub</a>
+                <a href="https://login.ki.fh-swf.de/new-jupyterhub" target="_blank">JupyterHub</a>
             </li>
-            <li><a href="/impressum">Impressum</a></li>
             <li><a href="/dokumentation">Dokumentation</a></li>
             <li><a href="/faq">FAQ</a></li>
-            <li><ClusterStatus client:load /></li>
+
         </ul>
     </nav>
 </header>
