--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
-import { Astro } from "astro";
 import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import HeadSEO from "../components/HeadSEO.astro";
 ---
 
 <html lang="en">
@@ -12,12 +13,16 @@ import Header from "../components/Header.astro";
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <title>KI & Data Science an der FH Südwestfalen</title>
+        <HeadSEO />
     </head>
     <body>
         <Header />
-        <main class="prose prose-headings:mb-3 prose-headings:font-extrabold prose-h1:text-4xl prose-h2:text-2xl prose-h3:text-xl max-w">
+        <main
+            class="prose prose-headings:mb-3 prose-headings:font-extrabold prose-h1:text-4xl prose-h2:text-2xl prose-h3:text-xl max-w"
+        >
             <slot />
         </main>
+        <Footer />
     </body>
 </html>
 
@@ -32,6 +37,4 @@ import Header from "../components/Header.astro";
         margin-left: auto;
         margin-right: auto;
     }
-
-
 </style>
