fix: a11y & seo issues

--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -1,6 +1,8 @@
 ---
-
+const description = `KI & Data Science an der Fachhochschule Südwestfalen. Hier finden Sie Tools und Informationen zu Künstlicher Intelligenz und Data Science.`;
 ---
+
+<meta name="description" content="KI & Data Science an der FH Südwestfalen" />
 
 <script type="application/ld+json">
     {
