--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,19 +10,24 @@ import ClusterStatus from "./ClusterStatus";
                     ><img
                         class="logo"
                         src="/fh-swf.svg"
+                        alt="Logo der Fachhochschule Südwestfalen"
+                        title="Fachhochschule Südwestfalen"
                     /></a
                 >
             </li>
             <li><a href="/">Home</a></li>
             <li>
-                <a href="https://openai.ki.fh-swf.de" target="_blank">K!mpuls</a>
+                <a href="https://openai.ki.fh-swf.de" target="_blank">K!mpuls</a
+                >
             </li>
             <li>
-                <a href="https://login.ki.fh-swf.de/new-jupyterhub" target="_blank">JupyterHub</a>
+                <a
+                    href="https://login.ki.fh-swf.de/new-jupyterhub"
+                    target="_blank">JupyterHub</a
+                >
             </li>
             <li><a href="/dokumentation">Dokumentation</a></li>
             <li><a href="/faq">FAQ</a></li>
-
         </ul>
     </nav>
 </header>
