--- a/public/index.css
+++ b/public/index.css
@@ -36,6 +36,7 @@
 
 nav a {
 	text-decoration: none;
+	font-weight: 700;
 }
 
 nav a:hover {
@@ -145,10 +146,6 @@ body {
 	line-height: 1.5;
 }
 
-nav ul {
-	list-style: none;
-	padding: 0;
-}
 
 .content>section>*+*,
 .content>section>blockquote>*+*,
