--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,8 @@
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import HeadSEO from "../components/HeadSEO.astro";
+
+import "./src/styles/global.css";
 ---
 
 <html lang="en">
@@ -28,6 +30,12 @@ import HeadSEO from "../components/HeadSEO.astro";
 
 <style lang="scss">
     body {
+        margin: 0;
+    }
+
+    ul {
+        list-style: square;
+        padding: 0;
         margin: 0;
     }
 
