fix: update jupyterhub link

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,7 @@ import ClusterStatus from "./ClusterStatus";
             </li>
             <li>
                 <a
-                    href="https://login.ki.fh-swf.de/new-jupyterhub"
+                    href="https://www.ki.fh-swf.de/new-jupyterhub"
                     target="_blank">JupyterHub</a
                 >
             </li>
