--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import HeadSEO from "../components/HeadSEO.astro";
 
-import "./src/styles/global.css";
+import "../styles/global.css";
 ---
 
 <html lang="en">
